cmake_minimum_required(VERSION 3.24)
project(cpp_basic_learning)

set(CMAKE_CXX_STANDARD 17)

include_directories(basics)
include_directories(core)
include_directories(stl)
include_directories(template)


add_executable(01-HelloWorld basics/01-HelloWorld.cpp)
add_executable(02-variable basics/02-variable.cpp)
add_executable(03-constant basics/03-constant.cpp)
add_executable(04-modifiers_and_data_types basics/04-modifiers_and_data_types.cpp)
add_executable(05-escape_character basics/05-escape_character.cpp)
add_executable(06-keyboard_input basics/06-keyboard_input.cpp)
add_executable(07-operator basics/07-operator.cpp)
add_executable(08-flowage_structure basics/08-flowage_structure.cpp)
add_executable(09-one_dimensional_array basics/09-one_dimensional_array.cpp)
add_executable(10-bubble_sort basics/10-bubble_sort.cpp)
add_executable(11-two_dimensional_array basics/11-two_dimensional_array.cpp)
add_executable(12-function_definition basics/12-function_definition.cpp)
add_executable(13-value_propagation basics/13-value_propagation.cpp)
add_executable(14-function_declaration basics/14-function_declaration.cpp)
add_executable(15-swap basics/15-swap.cpp)
add_executable(15-functions_are_written_in_files basics/15-functions_are_written_in_files.cpp)
add_executable(16-pointer basics/16-pointer.cpp)
add_executable(17-null_and_wild_pointers basics/17-null_and_wild_pointers.cpp)
add_executable(18-const_modified_pointer basics/18-const_modified_pointer.cpp)
add_executable(19-pointer_and_array basics/19-pointer_and_array.cpp)
add_executable(20-pointer_and_function basics/20-pointer_and_function.cpp)
add_executable(21-struct basics/21-struct.cpp)
add_executable(22-struct_pointer basics/22-struct_pointer.cpp)

add_executable(01-global_area core/01-global_area.cpp)
add_executable(02-stack_area core/02-stack_area.cpp)
add_executable(03-heap_area core/03-heap_area.cpp)
add_executable(05-reference_as_function_argument core/05-reference_as_function_argument.cpp)
add_executable(06-function_return_value_by_reference core/06-function_return_value_by_reference.cpp)
add_executable(07-function_parameter_default_values core/07-function_parameter_default_values.cpp)
add_executable(09-note_on_function_overloading core/09-note_on_function_overloading.cpp)
add_executable(10-class core/10-class.cpp)
add_executable(11-access_permission core/11-access_permission.cpp)
add_executable(12-constructor_and_destructor core/12-constructor_and_destructor.cpp)
add_executable(13-init_list core/13-init_list.cpp)
add_executable(14-static_member core/14-static_member.cpp)
add_executable(15-const_modified_member_function core/15-const_modified_member_function.cpp)
add_executable(16-global_function_friend core/16-global_function_friend.cpp)
add_executable(17-class_friend core/17-class_friend.cpp)
add_executable(18-member_function_friend core/18-member_function_friend.cpp)
add_executable(19-plus_operator_overloading core/19-plus_operator_overloading.cpp)
add_executable(20-left_shift_operator_overloading core/20-left_shift_operator_overloading.cpp)
add_executable(21-increment_operator_overloading core/21-increment_operator_overloading.cpp)
add_executable(22-assignment_operator_overloading core/22-assignment_operator_overloading.cpp)
add_executable(23-relation_operator_overloading core/23-relation_operator_overloading.cpp)
add_executable(24-functor_operator_overloading core/24-functor_operator_overloading.cpp)
add_executable(25-polymorphism core/25-polymorphism.cpp)
add_executable(26-polymorphic_calculator_case core/26-polymorphic_calculator_case.cpp)
add_executable(27-pure_virtual_function core/27-pure_virtual_function.cpp)
add_executable(28-virtual_destructor_and_pure_virtual_destructor core/28-virtual_destructor_and_pure_virtual_destructor.cpp)
add_executable(29-IO core/29-IO.cpp)

add_executable(01-function_template template/01-function_template.cpp)
add_executable(02-function_template_notes template/02-function_template_notes.cpp)
add_executable(03-function_template_array_sort template/03-function_template_array_sort.cpp)
add_executable(04-ordinary_function_and_function_template_calling_rules template/04-ordinary_function_and_function_template_calling_rules.cpp)
add_executable(05-class_template template/05-class_template.cpp)
add_executable(06-the_difference_between_class_template_and_function_template template/06-the_difference_between_class_template_and_function_template.cpp)
add_executable(07-class_template_member_function_create_timing template/07-class_template_member_function_create_timing.cpp)
add_executable(08-class_template_object_do_function_reference template/08-class_template_object_do_function_reference.cpp)
add_executable(09-class_template_and_inheritance template/09-class_template_and_inheritance.cpp)
add_executable(10-class_template_member_function_class_outer_impl template/10-class_template_member_function_class_outer_impl.cpp)
add_executable(11-class_template_sub_file_write template/11-class_template_sub_file_write.cpp)
add_executable(12-class_template_and_friend template/12-class_template_and_friend.cpp)
add_executable(13-case_column_array_package template/13-case_column_array_package.cpp)
add_executable(02-vector_built_in_data_type stl/02-vector_built_in_data_type.cpp)
add_executable(03-vector_custom_data_type stl/03-vector_custom_data_type.cpp)
add_executable(04-vector_nested_vector stl/04-vector_nested_vector.cpp)
add_executable(05-string_constructor_function stl/05-string_constructor_function.cpp)
add_executable(06-string_assignment stl/06-string_assignment.cpp)
add_executable(07-string_splice stl/07-string_splice.cpp)
add_executable(08-string_find_replace stl/08-string_find_replace.cpp)
add_executable(09-string_compare stl/09-string_compare.cpp)
add_executable(10-string_get stl/10-string_get.cpp)
add_executable(11-string_insert_delete stl/11-string_insert_delete.cpp)